CSCFAIRMETA-775: [ADD] Adds endpoint for querying datasets based on list of IDs provided in body; swagger updates.
