# src/metax_api/api/rest/base/views/dataset_view.py
@@ -325,6 +325,14 @@ class DatasetViewSet(CommonViewSet):
 
         return Response(data={}, status=status.HTTP_200_OK)
 
+    @action(detail=False, methods=['post'], url_path="list")
+    def list_datasets(self, request):
+        """
+        Returns datasets based on list of dataset IDs comming with request body.
+        """
+        self.queryset_search_params = {'id__in': request.data}
+        return super(DatasetViewSet, self).list(request)
+
     @action(detail=False, methods=['post'], url_path="flush_password")
     def flush_password(self, request): # pragma: no cover
         """
